# mcp-stash

./: CLAUDE.md  Makefile  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
plugins/_template/: .mcp.json  CHANGELOG.md  README.md  fastmcp.json  pyproject.toml
plugins/_template/.claude-plugin/: plugin.json
plugins/_template/skills/template-skill/: SKILL.md
plugins/_template/src/mcp_stash_template/: __init__.py  __main__.py  server.py
plugins/_template/tests/: test_server.py
plugins/career-navigator/: .mcp.json  README.md  fastmcp.json  pyproject.toml
plugins/career-navigator/.claude-plugin/: plugin.json
plugins/career-navigator/skills/career-navigator/: SKILL.md
plugins/career-navigator/skills/career-navigator/references/: onet-data.md  riasec-interview.md
plugins/career-navigator/src/mcp_stash_career_navigator/: __init__.py  __main__.py  matching.py  onet_data.py  preferences_store.py  profile_store.py  server.py
plugins/career-navigator/src/mcp_stash_career_navigator/data/: onet_occupations.json
plugins/career-navigator/tests/: test_server.py
plugins/imessages/: .mcp.json  CHANGELOG.md  README.md  fastmcp.json  pyproject.toml
plugins/imessages/.claude-plugin/: plugin.json
plugins/imessages/skills/imessages/: SKILL.md
plugins/imessages/src/mcp_stash_imessages/: __init__.py  __main__.py  server.py
plugins/imessages/tests/: test_server.py
plugins/iphone/: .mcp.json  CHANGELOG.md  README.md  fastmcp.icallhistory.json  fastmcp.imessage.json  fastmcp.json  pyproject.toml
plugins/iphone-history/: .mcp.json  CHANGELOG.md  README.md  fastmcp.json  pyproject.toml
plugins/iphone-history/.claude-plugin/: plugin.json
plugins/iphone-history/hooks/: hooks.json
plugins/iphone-history/skills/iphone-history/: SKILL.md
plugins/iphone-history/src/: mcp_stash_common
plugins/iphone-history/src/mcp_stash_iphone_history/: __init__.py  __main__.py  server.py
plugins/iphone-history/tests/: test_server.py
plugins/iphone/.claude-plugin/: plugin.json
plugins/iphone/hooks/: check_uv.py
plugins/iphone/skills/icallhistory/: SKILL.md
plugins/iphone/skills/icallhistory/references/: platform-issues.md  schema.md
plugins/iphone/skills/imessage/: SKILL.md
plugins/iphone/skills/imessage/references/: attributed-body.md  platform-issues.md  schema.md  trusted-contacts.md
plugins/iphone/src/mcp_stash_iphone/: __init__.py  __main__.py  contacts.py  dates.py  server.py
plugins/iphone/tests/: test_server.py
scripts/: new_plugin.sh
