[project]
name = "mcp-stash"
version = "0.0.0"
description = "uv workspace root + Claude Code/Desktop/Cowork plugin marketplace for mcp-stash solutions."
requires-python = ">=3.12"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*", "plugins/*"]

[dependency-groups]
dev = [
    "fastmcp>=3.4",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
testpaths = ["packages", "plugins"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["plugins/*/src/mcp_stash_common"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
