[project]
name = "mcp-stash-template"
version = "0.0.0"
description = "Copy-paste starting point for a new mcp-stash plugin. Not published to the marketplace."
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.4",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9"]
build-backend = "uv_build"
