[project]
name = "mcp-stash-career-navigator"
version = "0.1.0"
description = "FastMCP server bundled with the mcp-stash 'career-navigator' plugin: conversational RIASEC profiling and local O*NET occupation matching for a high school student."
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.4",
    "keyring>=25.5.0",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["mcp_stash_career_navigator", "mcp_stash_common"]
