[project]
name = "mcp-stash-iphone-history"
version = "0.1.0"
description = "Placeholder FastMCP server bundled with the mcp-stash 'iphone-history' plugin."
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.4",
    "keyring>=25.5.0",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["mcp_stash_iphone_history", "mcp_stash_common"]
