[project]
name = "mcp-stash-iphone"
version = "0.1.0"
description = "FastMCP servers (imessage, icallhistory) bundled with the mcp-stash 'iphone' plugin: local iMessage read/send and Mac/iPhone call history, both with Contacts resolution."
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.4",
    "keyring>=25.5.0",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["mcp_stash_iphone", "mcp_stash_common"]
